--- a/app/globals.css
+++ b/app/globals.css
@@ -101,3 +101,13 @@ body {
     }
   }
 }
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.hw {
+  height: 1.875rem;
+  width: 1.875rem
+}
